# shazam

./: .gitignore  LICENSE.md  README.md  dune-project  shazam.opam
shazam-client/: build.gradle  settings.gradle
shazam-client/src/main/java/ca/devpro/shazam/client/: ShazamClient.java
shazam-client/src/main/java/ca/devpro/shazam/dto/: LogDto.java  Severity.java
src/: dune  shazam.ml
src/client/: client.ml  dune
src/db/: db.ml  db.mli  dune  migration.ml
src/web/: app.eml.ml  dune  home.eml.ml  log.eml.ml  template.eml.ml  web.eml.ml  web.ml
static/: chart.js  realtime.js  utils.css
