(library
 (name web)
 (public_name shazam.web)
 (libraries lwt core dream yojson ppx_deriving_yojson.runtime shazam.db)
 (preprocess
  (pps ppx_deriving_yojson lwt_ppx)))

(rule
 (targets home.ml template.ml app.ml log.ml)
 (deps home.eml.ml template.eml.ml app.eml.ml log.eml.ml)
 (action
  (run dream_eml %{deps} --workspace %{workspace_root})))
